# browsertrix

backend/: default.nix  pyproject.toml
frontend/: default.nix  node-packages.nix  package-lock.json  webpack.prod.js
