
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btrixcloud"
version = "1.14.6"
dependencies = [
    "gunicorn",
    "uvicorn[standard]",
    "fastapi==0.103.2",
    "motor",
    "passlib",
    "PyJWT==2.8.0",
    "pydantic==2.8.2",
    "email-validator",
    "loguru",
    "aiofiles",
    "kubernetes-asyncio==29.0.0",
    "kubernetes",
    "aiobotocore",
    "requests",
    "redis>=5.0.0",
    "pyyaml",
    "jinja2",
    "humanize",
    "python-multipart",
    "pathvalidate",
    "backoff>=2.2.1",
    "python-slugify>=8.0.1",
    "types_aiobotocore_s3",
    "types-redis",
    "types-python-slugify",
    "types-pyYAML",
    "remotezip",
    "json-stream",
    "aiostream"
]
